iptables.txt
# Generated by iptables-save v1.6.0 on Sun Jun  7 21:04:34 2020
*filter
:INPUT ACCEPT [240:16492]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [213:28200]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.17.0.4/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8888 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker1 -o docker1 -p tcp -m tcp --dport 8001 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker1 -o docker1 -p tcp -m tcp --dport 8001 -j ACCEPT
-A DOCKER -d 172.17.0.1/32 ! -i docker1 -o docker1 -p tcp -m tcp --dport 8001 -j ACCEPT
-A DOCKER -d 172.17.0.1/32 ! -i docker1 -o docker1 -p tcp -m tcp --dport 8001 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sun Jun  7 21:04:34 2020
# Generated by iptables-save v1.6.0 on Sun Jun  7 21:04:34 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.4/32 -d 172.17.0.4/32 -p tcp -m tcp --dport 8888 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 12345 -j DNAT --to-destination 172.17.0.4:8888
-A DOCKER ! -i docker1 -p tcp -m tcp --dport 8001 -j DNAT --to-destination 172.17.0.2:8888
-A DOCKER ! -i docker1 -p tcp -m tcp --dport 8001 -j DNAT --to-destination 172.17.0.2:8888
-A DOCKER ! -i docker1 -p tcp -m tcp --dport 8001 -j DNAT --to-destination 172.17.0.1:8888
-A DOCKER ! -i docker1 -p tcp -m tcp --dport 8001 -j DNAT --to-destination 172.17.0.2:8888
-A DOCKER ! -i docker1 -p tcp -m tcp --dport 8001 -j DNAT --to-destination 172.17.0.2:8888
COMMIT
# Completed on Sun Jun  7 21:04:34 2020
